Bug #14514 Creating table with packed key fails silently
Submitted: 31 Oct 2005 17:02 Modified: 20 Dec 2005 14:07
Reporter: Martin Skold
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.16 OS:
Assigned to: Magnus Blaudd Target Version:

[31 Oct 2005 17:02] Martin Skold
Description:
The following statement fails silently:
CREATE TABLE a ( b INT ) PACK_KEYS = 0 ENGINE = ndb;

How to repeat:
CREATE TABLE a ( b INT ) PACK_KEYS = 0 ENGINE = ndb;

Suggested fix:
Seems to be a conflict between flag definitions:
sql/handler.h: #define HA_CREATE_USED_PACK_KEYS    128
include/my_base.h: #define HA_CREATE_FROM_ENGINE   128

Suggestion, move flag to handler.h instead and choose another value.
[2 Nov 2005 15:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/31810
[2 Nov 2005 17:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/31814
[21 Nov 2005 12:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/32450
[21 Nov 2005 18:04] Magnus Blaudd
Pushed to 4.1.16 and 5.0.17
[16 Dec 2005 20:24] Jim Winstead
It should (and now does) succeed.
[20 Dec 2005 14:07] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 4.1.16 and 5.0.17 changelogs.