Bug #14514  	Creating table with packed key fails silently  - Backport from 5.0